        - Wifi decoder fixed.
    * PM/share/locale/it/it.po
      PM/share/locale/packetmanipulator.pot
      PM/share/locale/it/LC_MESSAGES/packetmanipulator.mo:
        - Updated catalog and it translation.
    * PM/Gui/Core/MainWindow.py:
        - Codename changed.
    * PM/Backend/Scapy/translator.py:
        - Add radiotap and wifi protocol aliases.
    * setup.py:
        - Including generation and building of plugins.

    - Freeze for upcoming release.

2009-08-15 Francesco Piccinno <stack.box@gmail.com>
    * audits/passive/tcp/sources/main.py:
        - Fixing debug messages.
    * audits/active/arpping/sources/main.py:
        - Adding a new functionality to scan the current network segment for
          the presence of active hosts using ARP ping packets. This could be
          used by pressing scan button inside HostListTab.
        - Now ARPPing is an operation like the rest of plugins.
        - Messages are printed directly into AuditOutputPage.
    * audits/active/icmpredirect/sources/main.py:
        - Fixing wrong constants use.
    * audits/active/injector/sources/main.py:
        - Fixing various bugs in injector.
    * audits/active/synflood/sources/main.py:
        - Fixed message.
    * MANIFEST.in:
        - Updated to respect the new structure.
    * PM/Gui/Pages/AuditOutputPage.py:
        - Checking for log file overwrite.
        - Fixing a bug in button-press event handler.
        - Autoscrolling and solved problems with threads.
        - More icons.
    * PM/Gui/Tabs/HostListTab.py:
        - Now scan button is not dummy.
    * PM/Backend/Scapy/Context/Audit.py:
        - Adding get_netmask1() and get_netmask2() to AuditContext.
        - Adding onsend() callback to the SendWorker class and to the various
          AuditContext methods() like s_l{2,3,b}, si_l{2,3,b}, sr_l{2,3,b}.
    * PM/Backend/Scapy/wrapper.py:
        - Patching the select() used by scapy method with a custom one that