@@ -23,7 +23,7 @@ include PM/moo/detach.png
 include PM/moo/Makefile
 include PM/moo/dsutils.py
 
-recursive-include PM/share/pixmaps/umit *.png *.ico
+recursive-include PM/share/pixmaps/pm *.png *.ico
 recursive-include PM/share/locale/it/LC_MESSAGES/ *.mo
 
 recursive-include plugins *
