@@ -1,23 +1,24 @@
-#!/usr/bin/env python                                   
-# -*- coding: utf-8 -*-                                 
-# Copyright (C) 2008 Adriano Monteiro Marques           
-#                                                       
-# Author: Francesco Piccinno <stack.box@gmail.com>      
-#                                                       
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+# Copyright (C) 2008 Adriano Monteiro Marques
+#
+# Author: Francesco Piccinno <stack.box@gmail.com>
+#
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or   
-# (at your option) any later version.                                 
-#                                                                     
-# This program is distributed in the hope that it will be useful,     
-# but WITHOUT ANY WARRANTY; without even the implied warranty of      
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the       
-# GNU General Public License for more details.                        
-#                                                                     
-# You should have received a copy of the GNU General Public License   
-# along with this program; if not, write to the Free Software         
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
+import re
 import sys
 import glob
 import os, os.path
@@ -30,10 +31,13 @@ if os.name == 'nt':
         print "Install py2exe to use setup.py"
         sys.exit(-1)
 
-
 from distutils.core import setup, Extension
 from distutils.command.install import install
+from distutils.command.build import build
 from PM.Core.Const import PM_VERSION, PM_SITE
+
+BASE_DOCS_DIR = os.path.join('share', 'doc', 'PacketManipulator-%s' % PM_VERSION)
+DOCS_DIR = os.path.join('generated-doc', 'html')
 
 def getoutput(cmd):
     """Return output (stdout or stderr) of executing cmd in a shell."""
@@ -108,7 +112,7 @@ if os.getenv('PM_DOCKING', False):
         os.system("make")
         os.system("make moo-pygtk.c")
         os.chdir("../..")
-    
+
         moo = Extension(
             'PM.Gui.moo_stub',
             [
@@ -154,6 +158,38 @@ for filepath in glob.glob("PM/share/locale/*/LC_MESSAGES/*.mo"):
     targetpath = os.path.dirname(os.path.join("share/locale",lang))
     mo_files.append((targetpath, [filepath]))
 
+class pm_build(build):
+    def build_html_doc(self):
+        """Build the html documentation."""
+
+        try:
+            import sphinx
+        except ImportError:
+            self.warn("sphinx not found, documentation won't be build.")
+            return
+
+        sphinx_ver = sphinx.__version__
+        def digits(x):
+            res = re.match('\d+', x)
+            if res is None:
+                return 0
+            else:
+                return int(res.group())
+        if map(digits, sphinx_ver.split('.')) < [0, 5, 1]:
+            self.warn("Sphinx's version is too old (%s, expected at least "
+                      "0.5.1, documentation won't be build." % sphinx_ver)
+            return
+
+        # Build the documentation just like it is done through the Makefile
+        sphinx.main([__file__,
+            "-b", "html",
+            "-d", os.path.join("PM", "share", "doc", "doctrees"),
+            os.path.join("PM", "share", "doc", "src"), DOCS_DIR])
+
+    def run(self):
+        self.build_html_doc()
+        build.run(self)
+
 class pm_install(BuildExe):
     def run(self):
         print
@@ -164,12 +200,59 @@ class pm_install(BuildExe):
 
         BuildExe.run(self)
         self.build_plugins()
+        self.build_audits()
 
         print
         print "#" * 80
         print "# Packet manipulator is now installed"
         print "#" * 80
         print
+
+    def build_audits(self):
+        print
+        print "#" * 80
+        print "# Generating audits plugins"
+        print "#" * 80
+        print
+
+        dir = self.install_data
+        dirs = ['share', 'PacketManipulator', 'plugins']
+
+        while dirs:
+            dir = os.path.join(dir, dirs.pop(0))
+
+            if not os.path.exists(dir):
+                os.mkdir(dir)
+
+        dest_dir = dir
+        old_cd = os.getcwd()
+        pm_dir = os.path.abspath(os.path.dirname(os.sys.argv[0]))
+        plugins_dir = os.path.join(pm_dir, 'audits')
+        os.chdir(plugins_dir)
+
+        if os.name =="nt":
+            os.system("C:\\python25\\python.exe setup-autogen.py passive")
+            os.system("C:\\python25\\python.exe setup-autogen.py active")
+        else:
+            os.system("python setup-autogen.py passive")
+            os.system("python setup-autogen.py active")
+
+        print
+        print "#" * 80
+        print "# Building plugins"
+        print "#" * 80
+        print
+
+        if os.name =="nt":
+            os.system("C:\\python25\\python.exe setup-autogen.py "
+                      "-o %s -b passive" % dest_dir)
+            os.system("C:\\python25\\python.exe setup-autogen.py "
+                      "-o %s -b active" % dest_dir)
+        else:
+            os.system("python setup-autogen.py -o %s -b passive" % dest_dir)
+            os.system("python setup-autogen.py -o %s -b active" % dest_dir)
+
+        os.chdir(old_cd)
 
     def build_plugins(self):
         print
@@ -178,7 +261,7 @@ class pm_install(BuildExe):
         print "#" * 80
         print
 
-        dir = self.dist_dir
+        dir = self.install_data
         dirs = ['share', 'PacketManipulator', 'plugins']
 
         while dirs:
@@ -219,7 +302,8 @@ class pm_install(BuildExe):
         for plugin in glob.glob("*.ump"):
             dest = os.path.join(dest_dir, os.path.basename(plugin))
             os.rename(plugin, dest)
-            
+
+
 setup(name         = 'PacketManipulator',
       version      = PM_VERSION,
       description  = 'Packet manipulation made easy',
@@ -250,7 +334,10 @@ setup(name         = 'PacketManipulator',
                       'PM.Gui.Plugins',
                       'PM.higwidgets'
                      ],
-      data_files   = [('share/pixmaps/pm', glob.glob("PM/share/pixmaps/pm/*"))] + mo_files, 
+      data_files   = [('share/pixmaps/pm',
+                       glob.glob("PM/share/pixmaps/pm/*")),
+                      (BASE_DOCS_DIR, glob.glob(DOCS_DIR + "/*/*")),
+                     ] + mo_files,
       scripts      = ['PM/PacketManipulator'],
       windows      = [{'script' : 'PM/PacketManipulator',
                        'icon_resources' : [(1, 'PM/share/pixmaps/pm/pm-icon48.ico')]}],
@@ -260,5 +347,6 @@ setup(name         = 'PacketManipulator',
                           'includes' : 'gtk.keysyms,gtk,pango,atk,gobject,encodings,encodings.*,cairo,pangocairo,atk'},
                       'build': {'compiler' : 'mingw32'}},
       ext_modules  = modules,
-      cmdclass     = {'py2exe' : pm_install}
+      cmdclass     = {'py2exe' : pm_install,
+                      'build' : pm_build}
 )
